# Remote-Terminal-for-MeshCore

./: .env  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  mqtt_bridge.py  publish.sh  pyproject.toml  remoteterm-bridge.service  remoteterm.service
app/: AGENTS.md  CLAUDE.md  bot.py  config.py  database.py  decoder.py  event_handlers.py  keystore.py  main.py  migrations.py  models.py  packet_processor.py  radio.py  radio_sync.py  repository.py  websocket.py
app/routers/: channels.py  contacts.py  health.py  messages.py  packets.py  radio.py  read_state.py  settings.py  ws.py
frontend/: AGENTS.md  CLAUDE.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
frontend/lib/meshcore-cracker/: README.md  build.js  package.json
frontend/public/: site.webmanifest
frontend/src/: App.tsx  api.ts  index.css  prefetch.ts  styles.css  types.ts  useWebSocket.ts
frontend/src/components/: AGENTS.md  ConfigModal.tsx  CrackerPanel.tsx  MaintenanceModal.tsx  MapView.tsx  MessageInput.tsx  MessageList.tsx  NewMessageModal.tsx  PacketVisualizer.tsx  PathModal.tsx  RawPacketList.tsx  SettingsModal.tsx  Sidebar.tsx  (+3 more)
tests/: conftest.py  test_api.py  test_bot.py  test_contacts_router.py  test_decoder.py  test_echo_dedup.py  test_event_handlers.py  test_key_normalization.py  test_message_pagination.py  test_message_prefix_claim.py  test_migrations.py  test_packet_pipeline.py  test_radio_sync.py  test_repeater_routes.py  test_repository.py  test_send_messages.py  test_settings_router.py  test_websocket.py
tests/fixtures/: websocket_events.json
(+34 files in other folders)
